change data dir

--- a/Explore.ipynb
+++ b/Explore.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1 = pd.read_csv(\"2015.csv\")\n",
+    "data1 = pd.read_csv(\"data-world-happiness/2015.csv\")\n",
     "data2 = pd.read_csv(\"2016.csv\")\n",
     "data3 = pd.read_csv(\"2017.csv\")\n",
     "data4 = pd.read_csv(\"2018.csv\")\n",
